--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="buffer col-12"></div>
         <section class="text-center col-12">
 <hr>
-<a href=https://mailchi.mp/a8b0241bee29/kushal><button class="btn btn-primary btn-xl">find out more</button></a>
+<a href="https://mailchi.mp/a8b0241bee29/kushal"><button class="btn btn-primary btn-xl">find out more</button></a>
         </section>
       </div>
     </div> 
